web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-front-svc
  labels:
    app: web-front
spec:
  selector:
    app: web-front
  ports:
    - protocol: TCP
      name: nginx
      port: 9001
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-back-svc
  labels:
    app: web-back
spec:
  selector:
    app: web-back
  ports:
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 80
