web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fakedomain.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-front-svc
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: web-back-svc
            port:
              number: 9002
